src/tests/fixtures/field_definitions/ReferenceUndefinedType.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class Query {
  /** @gqlField */
  somePropertyField: SomeUndefienedType;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/ReferenceUndefinedType.ts:4:22 - error: Could not infer the GraphQL type. TypeScript sees this value as being typed as `any`. Perhaps you missing a type annotation, or have a type error elsewhere in your code?.

If you think Grats should be able to infer this type, please report an issue at https://github.com/captbaritone/grats/issues.

4   somePropertyField: SomeUndefienedType;
                       ~~~~~~~~~~~~~~~~~~
